--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,7 +59,22 @@ services:
     networks:
       - main
 
+  redis:
+    restart: unless-stopped
+    command: redis-server --appendonly yes
+    image: redis:latest
+    volumes:
+      - redis_data:/data
+    ports:
+      - "6381:6379"
+    networks:
+      - main
+
+
+
 volumes:
   postgres_data:
+  redis_data:
+
 networks:
   main:
