--- a/requirements.txt
+++ b/requirements.txt
@@ -9,12 +9,14 @@ click-didyoumean==0.3.1
 click-plugins==1.1.1.2
 click-repl==0.3.0
 Django==5.2.4
+django-filter==25.1
 django-redis==6.0.0
 django-rest-framework==0.1.0
 django-storages==1.14.6
 djangorestframework==3.16.0
 jmespath==1.0.1
 kombu==5.5.4
+Markdown==3.9
 packaging==25.0
 prompt_toolkit==3.0.51
 psycopg2-binary==2.9.10
@@ -22,7 +24,6 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
 redis==6.4.0
-hiredis==3.2.1
 s3transfer==0.13.0
 six==1.17.0
 sqlparse==0.5.3
@@ -30,4 +31,3 @@ tzdata==2025.2
 urllib3==2.5.0
 vine==5.1.0
 wcwidth==0.2.13
-django_filter==25.1
