--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 amqp==5.3.1
 asgiref==3.9.0
+attrs==25.3.0
 billiard==4.2.1
 boto3==1.39.8
 botocore==1.39.8
@@ -14,7 +15,11 @@ django-redis==6.0.0
 django-rest-framework==0.1.0
 django-storages==1.14.6
 djangorestframework==3.16.0
+drf-spectacular==0.28.0
+inflection==0.5.1
 jmespath==1.0.1
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
 kombu==5.5.4
 Markdown==3.9
 packaging==25.0
@@ -23,11 +28,15 @@ psycopg2-binary==2.9.10
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
+PyYAML==6.0.2
 redis==6.4.0
+referencing==0.36.2
+rpds-py==0.27.1
 s3transfer==0.13.0
 six==1.17.0
 sqlparse==0.5.3
 tzdata==2025.2
+uritemplate==4.2.0
 urllib3==2.5.0
 vine==5.1.0
 wcwidth==0.2.13
