--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ django-redis==6.0.0
 django-rest-framework==0.1.0
 django-storages==1.14.6
 djangorestframework==3.16.0
+djangorestframework-simplejwt==5.5.1
 drf-spectacular==0.28.0
 inflection==0.5.1
 jmespath==1.0.1
@@ -28,6 +29,7 @@ psycopg2-binary==2.9.10
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
+pyjwt==2.10.1
 PyYAML==6.0.2
 redis==6.4.0
 referencing==0.36.2
